Change various 'new Double' etc. to 'Double.valueOf'