@@ -211,7 +211,7 @@ public class BuildBinarizedDataset  {
       DocumentPreprocessor document = new DocumentPreprocessor(sin);
       document.setSentenceFinalPuncWords(new String[] {"\n"});
       List<HasWord> tokens = document.iterator().next();
-      Integer mainLabel = new Integer(tokens.get(0).word());
+      Integer mainLabel = Integer.valueOf(tokens.get(0).word());
       //System.out.print("Main Sentence Label: " + mainLabel.toString() + "; ");
       tokens = tokens.subList(1, tokens.size());
       //log.info(tokens);
